--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -28,13 +28,17 @@
 
 .grid {
     margin: 0 4%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    display: block;
+
+    @include media($bp-tablet) {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    }
 }
 
 .grid-item {
     display: block;
-    background-color: gold;
+    background-color: black;
     padding-top: 40px;
     padding-left: 50px;
     padding-right: 50px;
